Roles page incomplete

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravel-react-lawfirm",
+    "name": "adewang0629/laravel-react-lawfirm",
     "description": "Laravel-React-Lawfirm",
     "type": "project",
     "license": "MIT",
