--- a/package.json
+++ b/package.json
@@ -26,13 +26,17 @@
         "@mui/icons-material": "^5.14.3",
         "@mui/lab": "^5.0.0-alpha.139",
         "@mui/material": "^5.14.4",
+        "@mui/x-date-pickers": "^6.11.2",
         "@reduxjs/toolkit": "^1.5.0",
         "axios": "^0.21.1",
+        "dayjs": "^1.11.5",
+        "draft-js": "^0.11.7",
         "formik": "^2.4.3",
         "i": "^0.3.7",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-draft-wysiwyg": "^1.15.0",
         "react-redux": "^7.2.2",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
