--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "draft-js": "^0.11.7",
         "formik": "^2.4.3",
         "i": "^0.3.7",
+        "mui-color-input": "^2.0.0",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
